--- a/style.css
+++ b/style.css
@@ -2,24 +2,22 @@
     text-align: center;
     background-color: darkred;
     font-size:40px;
-    border-radius:10px ;
+    border-radius:10px 
 }
     
     #img-caption {
       font-size: 19px;
-      font-style: italic;
-
+      font-style: italic
     }
 
     #image {
         width: 100%;
         height: 800px;
         border-radius: 20px;
-        border: 2px solid rgb(99, 7, 7);
+        border: 2px solid rgb(99, 7, 7)
 }
     
     #bdy {
-        background-color: #630606be;
+        background-color: #630606be
     }
-    
     
